--- a/style.css
+++ b/style.css
@@ -149,8 +149,64 @@ i.fa-solid.fa-caret-up {
 
 .articles {
   display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  gap: 10px;
+  height: 100%;
 }
 
 .articles > div {
   color: black;
 }
+
+/* grid items */
+
+.main-article {
+  /*  start on row 2 column 1, and span 2 rows and 3 columns: */
+  grid-area: 1 / 1 / 3 / 8;
+  /* grid-column-start: 1;
+  grid-column-end: 8;
+  grid-row-start: 1;
+  grid-row-end: 3; */
+  border: 1px solid black;
+  background-color: #ffa028;
+}
+.sub-article {
+  grid-area: 3 / 2 / 5 / 6;
+  border: 1px solid black;
+  background-color: rgb(12, 23, 230);
+}
+.left-aside-articles {
+  grid-area: 3 / 1 / 10 / 2;
+  border: 1px solid black;
+  background-color: bisque;
+}
+
+.right-aside-articles {
+  grid-area: 3 / 6 / 10 / 8;
+  border: 1px solid black;
+  background-color: rgb(232, 20, 168);
+}
+
+/* .smaller-articles1 {
+  grid-area: 5 / 6 / 7 / 8;
+  border: 1px solid black;
+  background-color: rgb(230, 12, 96);
+}
+
+.smaller-articles2 {
+  grid-area: 3 / 6 / 10 / 8;
+  border: 1px solid black;
+  background-color: rgb(12, 230, 230);
+}
+.smaller-articles3 {
+  grid-area: 3 / 2 / 10 / 6;
+  border: 1px solid black;
+  background-color: rgb(228, 236, 7);
+}
+
+.smaller-articles4 {
+  grid-area: 3 / 6 / 5 / 8;
+  border: 1px solid black;
+  background-color: rgb(3, 17, 33);
+} */
