--- a/style.css
+++ b/style.css
@@ -163,12 +163,11 @@ i.fa-solid.fa-caret-up {
 
 .main-article {
   grid-area: 1 / 1 / 3 / 8;
-  border: 1px solid black;
-  background-color: #ffa028;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 10px;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 20px;
+  border-bottom: 1px black solid;
 }
 .sub-article {
   grid-area: 3 / 2 / 5 / 6;
@@ -215,3 +214,45 @@ i.fa-solid.fa-caret-up {
 .main-article > div {
   color: black;
 }
+
+.main-article-img {
+  grid-area: 1 / 1 / 6 / 3;
+  border: 1px solid black;
+  background: url(/assets/images/main-article-img.jpg) no-repeat center center/cover;
+}
+
+.main-article-header {
+  grid-area: 1 / 3 / 4 / 6;
+  font-size: 22px;
+}
+.main-article-header > h1 {
+  color: black;
+  padding: 3px 10px;
+  font-family: AvenirNext-Bold;
+  font-weight: 600;
+}
+
+.main-article-p1 {
+  grid-area: 4 / 3 / 6 / 4;
+}
+.main-article-p2 {
+  grid-area: 4 / 4 / 6 / 5;
+}
+.main-article-p3 {
+  grid-area: 4 / 5 / 6 / 6;
+}
+
+.main-article-p1 > p,
+.main-article-p2 > p,
+.main-article-p3 > p {
+  padding: 5px;
+  font-family: AvenirNext-Regular;
+  font-size: 18px;
+  color: black;
+}
+
+/* .main-article-p1 > p:hover,
+.main-article-p2 > p:hover,
+.main-article-p3 > p:hover {
+  text-decoration: underline solid cyan 10px;
+} */
