--- a/style.css
+++ b/style.css
@@ -171,8 +171,10 @@ i.fa-solid.fa-caret-up {
 }
 .sub-article {
   grid-area: 3 / 2 / 5 / 6;
-  border: 1px solid black;
-  background-color: rgb(12, 23, 230);
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin: 10px;
 }
 .left-aside-articles {
   grid-area: 3 / 1 / 11 / 2;
@@ -232,6 +234,10 @@ i.fa-solid.fa-caret-up {
   font-weight: 600;
 }
 
+.main-article-header > h1:hover {
+  text-decoration: underline solid black 4px;
+}
+
 .main-article-p1 {
   grid-area: 4 / 3 / 6 / 4;
 }
@@ -251,8 +257,46 @@ i.fa-solid.fa-caret-up {
   color: black;
 }
 
-/* .main-article-p1 > p:hover,
+.main-article-p1 > p:hover,
 .main-article-p2 > p:hover,
 .main-article-p3 > p:hover {
-  text-decoration: underline solid cyan 10px;
-} */
+  text-decoration: underline solid black 2px;
+}
+
+.sub-article-img {
+  flex: 1;
+  background: url(/assets/images/sub-article-img.jpg) no-repeat center center/cover;
+  padding: 20px;
+}
+.sub-article-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.sub-article-content > h2 {
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 60px;
+  border-bottom: dotted 1px gray;
+  font-family: AvenirNext-Bold;
+}
+
+.sub-article-content > h2:hover {
+  text-decoration: underline solid black 2px;
+}
+.sub-article-content > p:hover {
+  text-decoration: underline solid black 0.7px;
+}
+
+.sub-article-content > p {
+  color: black;
+  font-size: 12px;
+  font-weight: 400;
+  border-bottom: dotted 1px gray;
+  padding: 3px 0;
+  margin-top: 8px;
+}
