--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --primary-text: white;
+  --secondary-text: black;
+}
+
 @font-face {
   src: url(/assets/font/AvenirNext-Regular.ttf);
   font-family: AvenirNext-Regular;
@@ -14,9 +19,48 @@
   text-decoration: none;
   font-family: AvenirNext-Regular;
   font-weight: 600;
-  color: white;
+  color: var(--primary-text);
 }
 
+/* utilities*/
+
+.article-topics {
+  color: var(--secondary-text);
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.names-header {
+  color: #0068ff;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.article-time {
+  color: #767676;
+  font-size: 12px;
+  font-weight: 400;
+  margin-top: 5px;
+}
+
+.big-h3 {
+  font-size: 24px;
+  padding: 6px;
+  font-weight: 600;
+  color: var(--secondary-text);
+  border-bottom: 0.667px solid black;
+  border-top: 0.667px solid black;
+}
+
+.small-h3 {
+  font-weight: 700;
+  font-size: 16px;
+  color: var(--secondary-text);
+}
+.small-h3:hover {
+  text-decoration: underline solid black 2px;
+}
+/* nav bars */
 .nav-grid-container {
   display: grid;
   background: rgb(28, 28, 28);
@@ -85,8 +129,8 @@
   padding: 6px 14px;
   border: 1px solid white;
   border-radius: 4px;
-  color: black;
-  background: white;
+  color: var(--secondary-text);
+  background: var(--primary-text);
 }
 
 main {
@@ -127,7 +171,7 @@ main > .content > .news-links > li > a:hover {
 }
 
 .stock-market > li > a > span {
-  color: black;
+  color: var(--secondary-text);
   padding: 0 5px;
   font-weight: 500;
 }
@@ -156,7 +200,7 @@ i.fa-solid.fa-caret-up {
 }
 
 .articles > div {
-  color: black;
+  color: var(--secondary-text);
 }
 
 /* grid items */
@@ -180,6 +224,11 @@ i.fa-solid.fa-caret-up {
   grid-area: 3 / 1 / 11 / 2;
   border: 1px solid black;
   background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 20px;
+  padding: 10px;
 }
 
 .right-aside-articles {
@@ -214,7 +263,7 @@ i.fa-solid.fa-caret-up {
 
 /* main article */
 .main-article > div {
-  color: black;
+  color: var(--secondary-text);
 }
 
 .main-article-img {
@@ -228,7 +277,7 @@ i.fa-solid.fa-caret-up {
   font-size: 22px;
 }
 .main-article-header > h1 {
-  color: black;
+  color: var(--secondary-text);
   padding: 3px 10px;
   font-family: AvenirNext-Bold;
   font-weight: 600;
@@ -254,7 +303,7 @@ i.fa-solid.fa-caret-up {
   padding: 5px;
   font-family: AvenirNext-Regular;
   font-size: 18px;
-  color: black;
+  color: var(--secondary-text);
 }
 
 .main-article-p1 > p:hover,
@@ -277,7 +326,7 @@ i.fa-solid.fa-caret-up {
 }
 
 .sub-article-content > h2 {
-  color: black;
+  color: var(--secondary-text);
   font-size: 24px;
   font-weight: 700;
   padding-bottom: 60px;
@@ -293,10 +342,33 @@ i.fa-solid.fa-caret-up {
 }
 
 .sub-article-content > p {
-  color: black;
+  color: var(--secondary-text);
   font-size: 12px;
   font-weight: 400;
   border-bottom: dotted 1px gray;
   padding: 3px 0;
   margin-top: 8px;
+}
+
+/* left aside */
+
+.latest {
+  color: rgb(255, 4, 4);
+}
+
+.most-read {
+  color: var(--secondary-text);
+}
+
+.left-aside-articles > div > h2 {
+  color: var(--secondary-text);
+}
+
+.left-aside-articles > div > h2 > span.article-topics {
+  padding: 5px;
+}
+
+.left-aside-articles > div {
+  border-bottom: dotted 1px gray;
+  padding-bottom: 15px;
 }
