--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   src: url(/assets/font/AvenirNext-Bold.ttf);
   font-family: AvenirNext-Bold;
 }
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -65,6 +66,7 @@
 .small-h3:hover {
   text-decoration: underline solid black 2px;
 }
+
 /* nav bars */
 .nav-grid-container {
   display: grid;
@@ -138,6 +140,8 @@
   background: var(--primary-text);
 }
 
+/* main */
+
 main {
   width: 100%;
   height: 200vh;
@@ -156,6 +160,8 @@ main > .content > ul {
   justify-content: space-evenly;
   border-bottom: 1px solid black;
 }
+
+/* stock-market nav */
 
 main > .content > ul > li {
   padding: 13px 8px;
@@ -196,6 +202,7 @@ i.fa-solid.fa-caret-up {
   font-family: var(--normal-font);
 }
 
+/* article grid */
 .articles {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -242,28 +249,22 @@ i.fa-solid.fa-caret-up {
   padding: 10px;
 }
 
-.smaller-articles1 {
-  grid-area: 5 / 2 / 6 / 6;
+.smaller-articles {
+  grid-area: 5 / 2 / 7 / 6;
   border: 1px solid black;
   background-color: rgb(230, 12, 96);
 }
 
-.smaller-articles2 {
-  grid-area: 6 / 2 / 7 / 6;
+.world-wide-articles {
+  grid-area: 7 / 2 / 9 / 6;
   border: 1px solid black;
   background-color: rgb(12, 230, 230);
 }
 
-.smaller-articles3 {
-  grid-area: 7 / 2 / 9 / 6;
-  border: 1px solid black;
-  background-color: rgb(228, 236, 7);
-}
-
-.smaller-articles4 {
+.live-articles {
   grid-area: 9 / 2 / 11 / 6;
   border: 1px solid black;
-  background-color: rgb(8, 231, 247);
+  background-color: rgb(228, 236, 7);
 }
 
 /* main article */
@@ -317,6 +318,7 @@ i.fa-solid.fa-caret-up {
   text-decoration: underline solid black 2px;
 }
 
+/* sub article */
 .sub-article-img {
   flex: 1;
   background: url(/assets/images/sub-article-img.jpg) no-repeat center center/cover;
