--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --primary-text: white;
   --secondary-text: black;
+  --sub-text: #767676;
   --normal-font: AvenirNext-Regular;
   --bold-font: AvenirNext-Bold;
 }
@@ -42,7 +43,7 @@
 }
 
 .small-font {
-  color: #767676;
+  color: var(--sub-text);
   font-size: 12px;
   font-weight: 400;
   margin-top: 5px;
@@ -151,8 +152,8 @@ main > .content {
   width: 73%;
   height: inherit;
   margin: 0 auto;
-  border-left: 1px solid black;
   border-right: 1px solid black;
+  border-left: 1px solid black;
 }
 main > .content > ul {
   display: flex;
@@ -251,20 +252,17 @@ i.fa-solid.fa-caret-up {
 
 .smaller-articles {
   grid-area: 5 / 2 / 7 / 6;
-  border: 1px solid black;
-  background-color: rgb(230, 12, 96);
+  display: grid;
+  gap: 25px;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  padding: 10px;
 }
 
 .world-wide-articles {
-  grid-area: 7 / 2 / 9 / 6;
-  border: 1px solid black;
-  background-color: rgb(12, 230, 230);
-}
-
-.live-articles {
-  grid-area: 9 / 2 / 11 / 6;
-  border: 1px solid black;
-  background-color: rgb(228, 236, 7);
+  grid-area: 7 / 2 / 11 / 6;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  margin-bottom: 25px;
 }
 
 /* main article */
@@ -445,7 +443,7 @@ i.fa-solid.fa-caret-up {
   font-weight: 700;
   border: 1.5px solid black;
   margin-left: 15px;
-  background: white;
+  background: var(--primary-text);
 }
 .news-letter > form > button:hover {
   background: #efefef;
@@ -459,4 +457,88 @@ i.fa-solid.fa-caret-up {
   margin-right: 7px;
   height: 20px;
   width: 20px;
+}
+
+/* small articles  */
+
+.smaller-articles > div {
+  padding-bottom: 32px;
+  border-bottom: dotted 1px gray;
+}
+
+.smaller-articles > div > p {
+  color: var(--secondary-text);
+  padding-bottom: 24px;
+  margin-top: 18px;
+  font-size: 14px;
+  height: auto;
+}
+
+/* world wide articles */
+.world-wide-articles > div {
+  margin: 10px;
+  border-bottom: dotted 1px gray;
+}
+
+.world-wide-articles > div > img {
+  height: 150px;
+  width: 200px;
+}
+
+/* footer */
+
+footer {
+  width: 100%;
+  height: 100px;
+  color: var(--secondary-text);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 16%;
+  background: var(--primary-text);
+  border-top: 1px solid black;
+}
+
+.left-footer-content {
+  color: var(--secondary-text);
+}
+
+.right-footer-content {
+  color: var(--secondary-text);
+}
+.right-footer-content > ul {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.right-footer-content > ul > li > a {
+  margin: 0 10px;
+}
+
+.left-footer-content > ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 10px;
+}
+
+.left-footer-content > ul > li > a,
+.right-footer-content > ul > li > a {
+  color: var(--secondary-text);
+  font-size: 12px;
+  font-weight: 300;
+  color: var(--sub-text);
+}
+
+.left-footer-content > ul > li > a:hover,
+.right-footer-content > ul > li > a:hover {
+  border-bottom: var(--sub-text) 1px solid;
+}
+
+.left-footer-content > p {
+  color: var(--sub-text);
+  font-size: 12px;
+  font-weight: 300;
+  margin-top: 10px;
 }
